[build-system]
requires = [
    "setuptools", 
    "wheel", 
    "torch==2.1.2",
    "torchvision==0.16.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "detectron2"
version = "0.6"
description = "Detectron2 is FAIR's next-generation research platform for object detection and segmentation."
authors = [{ name = "FAIR" }]
requires-python = ">=3.6"
dependencies = [
    "Pillow>=7.1",
    "pycocotools>=2.0.2",
    "termcolor>=1.1",
    "yacs>=0.1.8",
    "tabulate",
    "cloudpickle",
    "tqdm>4.29.0",
    "tensorboard",
    "fvcore>=0.1.5,<0.1.6",
    "iopath>=0.1.7,<0.2",
    "omegaconf>=2.1,<2.4",
    "hydra-core>=1.1",
]

[tool.setuptools]
packages = ["detectron2"]
